--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Get Current Version
-        id: version
+        id: vars
         run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
 
     - name: Set up Node.js Version
@@ -35,4 +35,4 @@ jobs:
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           REMOTE_PORT: ${{ secrets.REMOTE_PORT }}
-          TARGET: "${{ secrets.REMOTE_TARGET }}/${{ steps.version.outputs.tag }}"
+          TARGET: "${{ secrets.REMOTE_TARGET }}/${{ steps.vars.outputs.tag }}"
