--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,7 +13,10 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Get Current Verision
-      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/:1}" >> $GITHUB_ENV
+      run: |
+        TAG=${GITHUB_REF#refs/*/}
+        VERSION=${TAG:1}
+        echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
 
     - name: Set up Node.js Version
       uses: actions/setup-node@v2
