--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,6 +29,13 @@ jobs:
     - name: Build for Production
       run:  npm run build:prod
 
+    - name: Rename & zip build directory
+      run:  |
+        mv dist fvw-framework
+        zip -r ${{ env.RELEASE_VERSION }} fvw-framework
+        ls .
+
+
     - name: Deploy to update.fouadvollmer.de
       uses: easingthemes/ssh-deploy@main
       env:
