--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,7 +32,7 @@ jobs:
     - name: Rename & zip build directory
       run:  |
         mv dist fvw-framework
-        zip -r ${{ env.RELEASE_VERSION }} fvw-framework
+        zip -r "${{ env.RELEASE_VERSION }}.zip" fvw-framework
         ls .
 
 
